
add_subdirectory(inlab1)
add_subdirectory(outlab1)

add_subdirectory(inlab2)
add_subdirectory(outlab2)

add_subdirectory(inlab3)
add_subdirectory(outlab3)

add_subdirectory(inlab4)
add_subdirectory(outlab4)

add_subdirectory(inlab5)
add_subdirectory(outlab5)

add_subdirectory(inlab6)
add_subdirectory(outlab6)

#add_subdirectory(inlab7)
#add_subdirectory(outlab7)

#add_subdirectory(inlab8)

# No such thing as inlab9
#add_subdirectory(inlab9)

add_subdirectory(inlab10)
add_subdirectory(outlab10)

add_subdirectory(inlab11)
add_subdirectory(outlab11)

add_subdirectory(inlab12)
